# mercury-cli

./: .gitignore  CHANGELOG.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  eval_case.md  feature_request.md
.github/workflows/: build.yml  ci.yml  release.yml  repair-benchmark.yml  repair.yml
.mercury/: config.toml
docs/: ARCHITECTURE.md  CITATIONS.md  QUALITY.md  diligence-pack.md  known-limitations.md  operator-quickstart.md  supported-rust-verifier-classes.md
docs/benchmarks/: README.md  rust-v0-agent-sweep.report.json  rust-v0-quality.report.json  rust-v0-repair-benchmark.md
docs/case-studies/: ci-draft-pr-flow.md  local-red-to-green.md
evals/repair_benchmark/: README.md  publish.py  run.py
evals/v0/: README.md  manifest.json  run.py  tier0-manifest.json  tier1-manifest.json  tier2-manifest.json
evals/v1_typescript/: README.md  manifest.json  run.py
scripts/: check_tier1_gate.py  install.sh
src/: api.rs  db.rs  engine.rs  failure_parser.rs  lib.rs  main.rs  repo.rs  swarm.rs  thermal.rs  verification.rs
starter-repos/: README.md
starter-repos/ci-draft-pr-repair/: .gitignore  Cargo.toml  README.md
starter-repos/ci-draft-pr-repair/src/: lib.rs
starter-repos/local-rust-watch-repair/: Cargo.toml  README.md
tests/: eval_manifest.rs  failure_parser.rs  integration.rs  runtime_security_verification.rs  swarm_support.rs  v0_2_contract_fixtures.rs  v0_2_regressions.rs  v0_3_watch_artifacts.rs  verifier_allowlist.rs
(+52 files in other folders)
