[package]
name = "mercury-cli"
version = "0.1.0"
edition = "2021"
description = "The first diffusion-native CLI for autonomous code synthesis"
license-file = "LICENSE"
repository = "https://github.com/denster32/mercury-cli"

[dependencies]
# CLI framework
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# HTTP client for Mercury API
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Configuration
toml = "0.8"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Terminal UI
crossterm = "0.28"
ratatui = "0.29"

# Tree-sitter for code parsing
tree-sitter = "0.24"
tree-sitter-rust = "0.23"

# Git integration
git2 = "0.19"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
anyhow = "1"
thiserror = "2"

# UUID for agent IDs
uuid = { version = "1", features = ["v4"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
